# efx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Changelog.md  Makefile  README.md
.github/workflows/: examples-build.yml
docs/: guide.md
efx/: Cargo.toml  Changelog.md
efx-attrnames/: Cargo.toml  README.md
efx-attrnames/src/: lib.rs
efx-core/: Cargo.toml
efx-core/src/: attr.rs  doc_prelude.rs  lib.rs  parser.rs
efx-core/src/ast/: error.rs  lexer.rs  mod.rs  nodes.rs  parser.rs  span_range.rs
efx-core/src/parser/: error.rs  lexer.rs  mod.rs  nodes.rs  parser.rs  span_range.rs  tok.rs
efx-core/tests/: attr_tests.rs  parser_tests.rs
efx-sandbox/: Cargo.toml
efx-sandbox/src/: main.rs
efx-syntax/: README.md  language-configuration.json  package.json
efx-syntax/snippets/: efx.json
efx-syntax/syntaxes/: efx.tmLanguage.json
efx/docs/: guide.md  intro.md  tags.md
efx/docs/fr/: guide.md  intro.md  tags.md
efx/docs/rfcs/: EFX-0001-roadmap-0.5-0.7.md  README.md
efx/docs/rfcs/issues_drafts/: 0001-01-attributes-and-basic-tags.md  0001-02-panels-and-windows.md  0001-03-examples-and-ci.md
efx/examples/: bevy_overlay.rs  eframe_demo.rs  winit_wgpu_min.rs
efx/examples/eframe_demo/: index.html
efx/src/: attr_adapters.rs  buffer.rs  helpers.rs  input.rs  lib.rs  render.rs
efx/src/attr/: bool.rs  mod.rs
efx/src/interfaces/: block.rs  mod.rs  tag.rs  tag_attributes.rs
efx/src/tags/: bottom_panel.rs  button.rs  central_panel.rs  column.rs  data_table.rs  grid.rs  heading.rs  hyperlink.rs  image.rs  label.rs  mod.rs  panel.rs  resize.rs  row.rs  scroll_area.rs  separator.rs  side_panel.rs  table.rs  tabs.rs  text_field.rs  top_panel.rs  util.rs  window.rs
efx/src/utils/: attr.rs  buffer.rs  expr.rs  mod.rs  panel.rs  render.rs
efx/tests/: macro_ok.rs
efx/tests/ui/: button_bad_rounding.rs  button_bad_rounding.stderr  button_enabled_nonbool.rs  button_enabled_nonbool.stderr  button_unknown_attr.rs  button_unknown_attr.stderr  column_bad_align.rs  column_bad_align.stderr  column_unknown_attr.rs  column_unknown_attr.stderr  label_bad_size.rs  label_bad_size.stderr  label_unknown_attr.rs  label_unknown_attr.stderr  separator_with_children.rs
examples/: bevy_overlay.rs  winit_wgpu_min.rs
src/: lib.rs
src/components/: button.rs  label.rs  mod.rs
tests/: macro_ok.rs  parser_tests.rs
tests/ui/: separator_with_children.stderr  unknown_tag.rs  unknown_tag.stderr
