[package]
name = "efx"
description = "Rust XML Template Engine for Eframe framework"
authors = ["Max Zhuk <mail@zhukmax.com>"]
version = "0.2.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.11"
eframe = "0.32"
