[workspace]
members = ["efx", "efx-core", "efx-attrnames", "efx-sandbox"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
efx-core = "1"
efx-attrnames = "1"

[patch.crates-io]
efx-core = { path = "efx-core" }
efx-attrnames = { path = "efx-attrnames" }
