[package]
name = "efx-core"
description = "Core parser and AST for EFx proc-macro"
authors = ["Max Zhuk <mail@zhukmax.com>"]
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZhukMax/efx"
keywords = ["parser", "ast", "templating", "egui", "gui"]
categories = [
    "gui",
    "template-engine"
]

[features]
doc-prelude = ["egui"]

[dependencies]
egui = { version = "0.32", default-features = false, optional = true }
