[package]
name = "efx"
description = "Rust XML templating engine for building egui UIs with procedural macros"
authors = ["Max Zhuk <mail@zhukmax.com>"]
version = "0.4.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/ZhukMax/efx"
documentation = "https://docs.rs/efx"
keywords = ["egui", "eframe", "gui", "proc-macro", "templating"]
categories = [
    "gui",
    "template-engine",
    "development-tools::procedural-macro-helpers",
    "wasm",
]

[package.metadata.docs.rs]
# collect all the documentation with enabled features and cfg(docsrs) notes
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
efx-core = "1.0"

[dev-dependencies]
trybuild = "1.0"
# For the eframe example
eframe = "0.32"
# For the raw egui skeleton
egui = "0.32"
# For the bevy_egui example
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_ui",
    "png",
    "x11"
] }
bevy_egui = { version = "0.36", default-features = false }
# for wasm entrypoint
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Document", "Window"] }
